# yubikey.rs

./: CHANGELOG.md  COPYING  Cargo.toml  README.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml  security_audit.yml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: commands.rs  lib.rs  status.rs  terminal.rs
cli/src/commands/: list.rs  readcertificate.rs  readers.rs  status.rs
examples/: activate-fips-reset.rs  activate-fips.rs  change-mode.rs  check-fips-capable.rs  check-fips.rs
lib/: error.rs  internal.h  internal.rs  util.c  util.rs  version.rs  ykpiv.c  ykpiv.rs
src/: apdu.rs  cccid.rs  certificate.rs  chuid.rs  config.rs  consts.rs  container.rs  ed25519_wrapper.rs  error.c  error.rs  hsmauth.rs  internal.c  internal.rs  key.rs  lib.rs  metadata.rs  mgm.rs  mscmap.rs  msroots.rs  otp.rs  piv.rs  policy.rs  reader.rs  readers.rs  response.rs  serialization.rs  setting.rs  settings.rs  transaction.rs  util.c  util.rs  version.rs  ykpiv.c  yubikey.rs
src/mgm/: aes.rs  tdes.rs
tests/: integration.rs
tests/assets/: Bob.crt  Bob.der  Bob.key
