[package]
name = "yubikey"
version = "0.8.0"
description = """
Pure Rust cross-platform host-side driver for YubiKey devices from Yubico with
support for hardware-backed public-key decryption and digital signatures using
the Personal Identity Verification (PIV) application. Supports RSA (1024/2048/3072/4096)
or ECC (NIST P-256/P-384) algorithms e.g, PKCS#1v1.5, ECDSA
"""
authors = ["Tony Arcieri <tony@iqlusion.io>", "Yubico AB"]
license = "BSD-2-Clause"
repository = "https://github.com/iqlusioninc/yubikey.rs"
readme = "README.md"
categories = ["api-bindings", "authentication", "cryptography", "hardware-support"]
keywords = ["ecdsa", "encryption", "rsa", "piv", "signature"]
edition = "2021"
rust-version = "1.85"

[workspace]
members = [".", "cli"]

[workspace.dependencies]
sha2 = "0.11.0-rc.0"
x509-cert = { version = "0.3.0-rc.1", features = ["builder", "hazmat"] }

[dependencies]
bitflags = "2.5.0"
der = "0.8.0-rc.7"
des = "0.9.0-rc.0"
elliptic-curve = "0.14.0-rc.7"
hex = { package = "base16ct", version = "0.2", features = ["alloc"] }
log = "0.4"
nom = "8"
ecdsa = { version = "0.17.0-rc.2", features = ["digest", "pem"] }
p256 = "=0.14.0-pre.9"
p384 = "=0.14.0-pre.9"
pbkdf2 = { version = "0.13.0-rc.0", default-features = false, features = ["hmac"] }
pcsc = "2.3.1"
rand = "0.9"
rand_core = { version = "0.9", features = ["os_rng"] }
rsa = { version = "0.10.0-rc.3", features = ["sha2"] }
secrecy = "0.8"
sha1 = { version = "0.11.0-rc.0", features = ["oid"] }
sha2 = { workspace = true, features = ["oid"] }
signature = "3.0.0-rc.0"
subtle = "2"
uuid = { version = "1.2", features = ["v4"] }
x509-cert.workspace = true
zeroize = "1"

[dev-dependencies]
env_logger = "0.11"
once_cell = "1"

[features]
untested = []

[[example]]
name = "change-mode"
required-features = ["untested"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
